# algo-trading-playground

./: README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
helper_functions/: indicators.py  ingestion.py  plots_helper.py  stats_helper.py
notebooks/: 01_stock_data_exploration.ipynb  02_basic_strategy_experimentation.ipynb  03_rsi_analysis.ipynb
plots/: buy_and_hold.html  rsi_strategy.html  sma_crossover.html
